--- a/.ci_support/linux_64_mpiopenmpipython3.10.____cpython.yaml
+++ b/.ci_support/linux_64_mpiopenmpipython3.10.____cpython.yaml
@@ -12,6 +12,10 @@ docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 mpi:
 - openmpi
+mpich:
+- '3'
+openmpi:
+- '4'
 pin_run_as_build:
   python:
     min_pin: x.x
