--- a/.ci_support/linux_aarch64_mpimpichpython3.10.____cpython.yaml
+++ b/.ci_support/linux_aarch64_mpimpichpython3.10.____cpython.yaml
@@ -16,6 +16,10 @@ docker_image:
 - quay.io/condaforge/linux-anvil-aarch64
 mpi:
 - mpich
+mpich:
+- '3'
+openmpi:
+- '4'
 pin_run_as_build:
   python:
     min_pin: x.x
