--- a/.ci_support/linux_ppc64le_mpiopenmpipython3.9.____cpython.yaml
+++ b/.ci_support/linux_ppc64le_mpiopenmpipython3.9.____cpython.yaml
@@ -12,6 +12,10 @@ docker_image:
 - quay.io/condaforge/linux-anvil-ppc64le
 mpi:
 - openmpi
+mpich:
+- '3'
+openmpi:
+- '4'
 pin_run_as_build:
   python:
     min_pin: x.x
