--- a/.ci_support/osx_64_mpimpichpython3.7.____cpython.yaml
+++ b/.ci_support/osx_64_mpimpichpython3.7.____cpython.yaml
@@ -12,6 +12,10 @@ macos_machine:
 - x86_64-apple-darwin13.4.0
 mpi:
 - mpich
+mpich:
+- '3'
+openmpi:
+- '4'
 pin_run_as_build:
   python:
     min_pin: x.x
