--- a/.ci_support/osx_arm64_mpimpichpython3.10.____cpython.yaml
+++ b/.ci_support/osx_arm64_mpimpichpython3.10.____cpython.yaml
@@ -12,6 +12,10 @@ macos_machine:
 - arm64-apple-darwin20.0.0
 mpi:
 - mpich
+mpich:
+- '3'
+openmpi:
+- '4'
 pin_run_as_build:
   python:
     min_pin: x.x
