--- a/.ci_support/linux_aarch64_mpimpichpython3.12.____cpython.yaml
+++ b/.ci_support/linux_aarch64_mpimpichpython3.12.____cpython.yaml
@@ -9,7 +9,7 @@ cdt_arch:
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge/label/python_rc,conda-forge
+- conda-forge
 channel_targets:
 - conda-forge main
 docker_image:
@@ -28,6 +28,3 @@ python:
 - 3.12.* *_cpython
 target_platform:
 - linux-aarch64
-zip_keys:
-- - python
-  - channel_sources
