--- a/.ci_support/win_64_mpiimpipython3.11.____cpython.yaml
+++ b/.ci_support/win_64_mpiimpipython3.11.____cpython.yaml
@@ -5,7 +5,7 @@ channel_sources:
 channel_targets:
 - conda-forge main
 mpi:
-- msmpi
+- impi
 mpich:
 - '4'
 openmpi:
@@ -18,6 +18,3 @@ python:
 - 3.11.* *_cpython
 target_platform:
 - win-64
-zip_keys:
-- - python
-  - channel_sources
