--- a/.ci_support/win_64_mpiimpipython3.9.____73_pypy.yaml
+++ b/.ci_support/win_64_mpiimpipython3.9.____73_pypy.yaml
@@ -1,11 +1,11 @@
 c_compiler:
 - vs2019
 channel_sources:
-- conda-forge/label/python_rc,conda-forge
+- conda-forge
 channel_targets:
 - conda-forge main
 mpi:
-- msmpi
+- impi
 mpich:
 - '4'
 openmpi:
@@ -15,9 +15,6 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.12.* *_cpython
+- 3.9.* *_73_pypy
 target_platform:
 - win-64
-zip_keys:
-- - python
-  - channel_sources
