--- a/.ci_support/win_64_mpimsmpipython3.12.____cpython.yaml
+++ b/.ci_support/win_64_mpimsmpipython3.12.____cpython.yaml
@@ -1,21 +1,11 @@
-BUILD:
-- aarch64-conda_cos7-linux-gnu
 c_compiler:
-- gcc
-c_compiler_version:
-- '12'
-cdt_arch:
-- aarch64
-cdt_name:
-- cos7
+- vs2019
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
-docker_image:
-- quay.io/condaforge/linux-anvil-cos7-x86_64
 mpi:
-- openmpi
+- msmpi
 mpich:
 - '4'
 openmpi:
@@ -27,4 +17,4 @@ pin_run_as_build:
 python:
 - 3.12.* *_cpython
 target_platform:
-- linux-aarch64
+- win-64
