--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -8,6 +8,30 @@ jobs:
     vmImage: ubuntu-latest
   strategy:
     matrix:
+      linux_64_mpiimpipython3.10.____cpython:
+        CONFIG: linux_64_mpiimpipython3.10.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_mpiimpipython3.11.____cpython:
+        CONFIG: linux_64_mpiimpipython3.11.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_mpiimpipython3.12.____cpython:
+        CONFIG: linux_64_mpiimpipython3.12.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_mpiimpipython3.8.____cpython:
+        CONFIG: linux_64_mpiimpipython3.8.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_mpiimpipython3.9.____73_pypy:
+        CONFIG: linux_64_mpiimpipython3.9.____73_pypy
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
+      linux_64_mpiimpipython3.9.____cpython:
+        CONFIG: linux_64_mpiimpipython3.9.____cpython
+        UPLOAD_PACKAGES: 'True'
+        DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
       linux_64_mpimpichpython3.10.____cpython:
         CONFIG: linux_64_mpimpichpython3.10.____cpython
         UPLOAD_PACKAGES: 'True'
