--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -8,25 +8,43 @@ jobs:
     vmImage: windows-2022
   strategy:
     matrix:
-      win_64_python3.10.____cpython:
-        CONFIG: win_64_python3.10.____cpython
+      win_64_mpiimpipython3.10.____cpython:
+        CONFIG: win_64_mpiimpipython3.10.____cpython
         UPLOAD_PACKAGES: 'True'
-      win_64_python3.11.____cpython:
-        CONFIG: win_64_python3.11.____cpython
+      win_64_mpiimpipython3.11.____cpython:
+        CONFIG: win_64_mpiimpipython3.11.____cpython
         UPLOAD_PACKAGES: 'True'
-      win_64_python3.12.____cpython:
-        CONFIG: win_64_python3.12.____cpython
+      win_64_mpiimpipython3.12.____cpython:
+        CONFIG: win_64_mpiimpipython3.12.____cpython
         UPLOAD_PACKAGES: 'True'
-      win_64_python3.8.____cpython:
-        CONFIG: win_64_python3.8.____cpython
+      win_64_mpiimpipython3.8.____cpython:
+        CONFIG: win_64_mpiimpipython3.8.____cpython
         UPLOAD_PACKAGES: 'True'
-      win_64_python3.9.____73_pypy:
-        CONFIG: win_64_python3.9.____73_pypy
+      win_64_mpiimpipython3.9.____73_pypy:
+        CONFIG: win_64_mpiimpipython3.9.____73_pypy
         UPLOAD_PACKAGES: 'True'
-      win_64_python3.9.____cpython:
-        CONFIG: win_64_python3.9.____cpython
+      win_64_mpiimpipython3.9.____cpython:
+        CONFIG: win_64_mpiimpipython3.9.____cpython
         UPLOAD_PACKAGES: 'True'
-    maxParallel: 5
+      win_64_mpimsmpipython3.10.____cpython:
+        CONFIG: win_64_mpimsmpipython3.10.____cpython
+        UPLOAD_PACKAGES: 'True'
+      win_64_mpimsmpipython3.11.____cpython:
+        CONFIG: win_64_mpimsmpipython3.11.____cpython
+        UPLOAD_PACKAGES: 'True'
+      win_64_mpimsmpipython3.12.____cpython:
+        CONFIG: win_64_mpimsmpipython3.12.____cpython
+        UPLOAD_PACKAGES: 'True'
+      win_64_mpimsmpipython3.8.____cpython:
+        CONFIG: win_64_mpimsmpipython3.8.____cpython
+        UPLOAD_PACKAGES: 'True'
+      win_64_mpimsmpipython3.9.____73_pypy:
+        CONFIG: win_64_mpimsmpipython3.9.____73_pypy
+        UPLOAD_PACKAGES: 'True'
+      win_64_mpimsmpipython3.9.____cpython:
+        CONFIG: win_64_mpimsmpipython3.9.____cpython
+        UPLOAD_PACKAGES: 'True'
+    maxParallel: 8
   timeoutInMinutes: 360
   variables:
     CONDA_BLD_PATH: D:\\bld\\
