--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -3,3 +3,7 @@ mpi:
   - openmpi  # [not win]
   - impi     # [not osx and x86_64]
   - msmpi    # [win]
+mpich:       # [now win]
+  - '3'      # [now win]
+extend_keys:
+  - mpich
