--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,8 +1,15 @@
 mpi:
   - mpich    # [not win]
+  - mpich    # [not win]
   - openmpi  # [not win]
   - impi     # [not osx and x86_64]
   - msmpi    # [win]
 mpich:        # [not win]
   - '3'       # [not win]
   - '4'       # [not win]
+  - null      # [not win]
+  - null      # [not osx and x86_64]
+  - null      # [win]  
+zip_keys:
+  - - mpi
+    - mpich
