--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,7 +4,7 @@ mpi:
   - openmpi  # [not win]
   - impi     # [not osx and x86_64]
   - msmpi    # [win]
-mpich:        # [not win]
+mpich:
   - '3'       # [not win]
   - '4'       # [not win]
   - null      # [not win]
