--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,9 @@ build:
     - del src\\mpi.pth"  # [win]
     - export I_MPI_CC=$CC  # [mpi == "impi"]
     - {{ PYTHON }} -m pip install --no-deps --no-build-isolation . -vv
-  skip: true  # [win32]
-  skip: true  # [unix and mpi == "mpich" and mpich == "3" and py < 312]
+  {% if mpi == "mpich" and mpich == "3" and py < 312 %}
+  skip: true
+  {% endif %}
   run_exports:
     - {{ pin_subpackage("mpi4py", max_pin="x") }}
 
