--- a/.ci_support/linux_ppc64le_channel_sourcesconda-forgempiopenmpipython3.10.____cpython.yaml
+++ b/.ci_support/linux_ppc64le_channel_sourcesconda-forgempiopenmpipython3.10.____cpython.yaml
@@ -14,6 +14,8 @@ channel_targets:
 - conda-forge main
 docker_image:
 - quay.io/condaforge/linux-anvil-x86_64:alma9
+is_abi3:
+- true
 mpi:
 - openmpi
 mpich:
